# skillventory_pycli

./: README.md  pyproject.toml
src/skillventory_pycli/: __main__.py  main.py
